--- a/src/Aside.css
+++ b/src/Aside.css
@@ -1,18 +1,18 @@
-aside{
-    >nav{
-        display: flex;
-        flex-direction: column;
-        
-        >a{
-            background-color: #ccc;
-            text-decoration: none;
-            color: black;
-            padding: 8px;
-            display: block;
-            
-        }
-        >a.hover{
+aside {
+  > nav {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 
-        }
+    > a {
+      background-color: #ccc;
+      text-decoration: none;
+      color: black;
+      padding: 8px;
+      display: block;
     }
+    > a:hover {
+      background-color: #333;
+    }
+  }
 }
