--- a/src/Header.css
+++ b/src/Header.css
@@ -12,3 +12,11 @@ header {
     cursor: pointer;
   }
 }
+
+@media (min-width: 768px) {
+  header {
+    > div.toggleBtn {
+      display: none;
+    }
+  }
+}
